<resources>
    <string name="app_name">Palo</string>
    <string name="native_ads_id">ca-app-pub-9741346671607109/1306696944</string>
<!--    <string name="native_ads_id">ca-app-pub-3940256099942544/2247696110</string>-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fb_id">571619577064740</string>
    <string name="fb_login_id">fb571619577064740</string>
    <string name="all_confirm">Confirm</string>
    <string name="all_err_empty">Empty</string>
    <string name="login_user">Username</string>
    <string name="login_pass">Password</string>
    <string name="login_btn">Log In</string>
    <string name="login_failed">Please type username and password correctly</string>
    <string name="signup_btn">Sign Up</string>
    <string name="home_recent">Newest Movies</string>
    <string name="home_best">Best Movies</string>
    <string name="home_birthday">Today is day of</string>
    <string name="detail_director">Director</string>
    <string name="detail_description">Description</string>
    <string name="detail_screen">Screen writer</string>
    <string name="detail_cast">Cast</string>
    <string name="detail_date">Releasing date: </string>
    <string name="detail_nation">Nation: </string>
    <string name="detail_category">Category: </string>
    <string name="detail_reviews">Reviews</string>
    <string name="detail_not_rating">Please select rating before sending</string>
    <string name="detail_voted">You voted this movie</string>
    <string name="review_opening">Introduction</string>
    <string name="review_story">Story</string>
    <string name="review_act">Acting</string>
    <string name="review_picture">Cinema picture</string>
    <string name="review_sound">Sound</string>
    <string name="review_feeling">Feeling</string>
    <string name="review_message">Message</string>
    <string name="review_conclude">Conclude</string>
    <string name="review_send">Send Review</string>
    <string name="review_hint_intro">You can enter the introductory article if desired.</string>
    <string name="review_hint_story">Please give your opinion on the plot of the film.</string>
    <string name="review_hint_act">Please give your opinion on the acting of the cast.</string>
    <string name="review_hint_pic">If you want, you can rate the image of the film.</string>
    <string name="review_hint_sound">If you want, you can rate the sound of the film.</string>
    <string name="review_hint_feel">Do you have an appreciation for the emotion the film would bring?</string>
    <string name="review_hint_msg">Please give your opinion on the message that the film conveys.</string>
    <string name="review_hint_conclude">Please close the article with a great message!</string>
    <string name="profile_logout">Logout</string>
    <string name="profile_edt_profile">Change Profile</string>
    <string name="profile_change_pass">Change Password</string>
    <string name="profile_list_review">View My Review</string>
    <string name="profile_about">Feedback</string>
    <string name="pass_old">Old Password</string>
    <string name="pass_new">New Password</string>
    <string name="pass_confirm">Confirm Password</string>
    <string name="pass_err_wrong">Wrong Password</string>
    <string name="pass_err_different">Password must be different.</string>
    <string name="pass_err_not_match">Not matching</string>
    <string name="artist_director">Directed</string>
    <string name="artist_write">Wrote</string>
    <string name="artist_act">Played</string>
    <string name="search_movie">Movies</string>
    <string name="search_artist">Artists</string>
    <string name="cprofile_name">Display name</string>
    <string name="cprofile_birthday">Birthday</string>
    <string name="cprofile_gender">Gender</string>
    <string name="cprofile_male">Male</string>
    <string name="cprofile_female">Female</string>
    <string name="cprofile_secret">Secret</string>
    <string name="trend_hot_cast">Hot Casts</string>
    <string name="trend_hot_review">Hot Reviews</string>
    <string name="feedback_err">Empty</string>
    <string name="feedback_holder">Thanks for your feedback!</string>
    <string name="feedback_type_ux">User Experience</string>
    <string name="feedback_type_content">Content</string>
</resources>
