<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ChangeProfileActivity.ChangeProfileActivity"
    android:id="@+id/cprofile_layout">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundLight">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_gravity="center"

            android:padding="5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cprofile_layout_pass"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toTopOf="parent"

                android:padding="15dp"
                android:layout_marginHorizontal="40dp"
                android:background="@drawable/bg_input">

                <EditText
                    android:id="@+id/cprofile_edt_name"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    app:layout_constraintTop_toTopOf="parent"

                    android:maxLines="1"
                    android:text="@string/cprofile_name"
                    android:background="@null"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cprofile_layout_newpass"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@+id/cprofile_layout_pass"

                android:padding="15dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_input">

                <TextView
                    android:id="@+id/cprofile_txt_gender"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    app:layout_constraintTop_toTopOf="parent"

                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:hint="@string/cprofile_gender"
                    android:background="@null"/>
                <RadioGroup
                    android:id="@+id/cprofile_rag_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cprofile_txt_gender">
                    <RadioButton
                        android:id="@+id/cprofile_rad_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cprofile_female"/>
                    <RadioButton
                        android:id="@+id/cprofile_rad_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cprofile_male"/>
                    <RadioButton
                        android:id="@+id/cprofile_rad_secret"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cprofile_secret"/>
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cprofile_layout_confirmpass"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@+id/cprofile_layout_newpass"

                android:padding="15dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_input">

                <TextView
                    android:id="@+id/cprofile_label_birthday"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    app:layout_constraintTop_toTopOf="parent"

                    android:maxLines="1"
                    android:text="@string/cprofile_birthday"
                    android:background="@null"/>
                <TextView
                    android:id="@+id/cprofile_txt_birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    app:layout_constraintTop_toBottomOf="@+id/cprofile_label_birthday"
                    app:layout_constraintLeft_toLeftOf="parent"

                    android:textColor="@android:color/white"
                    android:text="dd/mm/yyyy"
                    android:layout_marginLeft="8dp"/>
                <ImageButton
                    android:id="@+id/cprofile_btn_birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    app:layout_constraintLeft_toRightOf="@+id/cprofile_txt_birthday"
                    app:layout_constraintBottom_toBottomOf="@+id/cprofile_txt_birthday"

                    android:layout_marginLeft="8dp"
                    android:src="@drawable/calendar"
                    android:background="@android:color/transparent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cprofile_btn_change"

                android:layout_width="match_parent"
                android:layout_height="50dp"

                app:layout_constraintTop_toBottomOf="@+id/cprofile_layout_confirmpass"

                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="40dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="25dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textStyle="bold"
                    android:textColor="@color/colorBtnTitle"
                    android:textSize="@dimen/all_btn_text_size"
                    android:layout_gravity="center"
                    android:text="@string/all_confirm"/>

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>