<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity.LoginActivity">

    <ImageView
        android:id="@+id/login_background"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:scaleType="centerCrop"/>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:padding="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_layout_username"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toTopOf="parent"

            android:padding="15dp"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/bg_input">

            <EditText
                android:id="@+id/login_edt_username"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toTopOf="parent"

                android:maxLines="1"
                android:hint="@string/login_user"
                android:background="@null"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_layout_password"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@+id/login_layout_username"

            android:padding="15dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_input">

            <EditText
                android:id="@+id/login_edt_password"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toTopOf="parent"

                android:inputType="textPassword"
                android:maxLines="1"
                android:hint="@string/login_pass"
                android:background="@null"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/login_btn_login"

            android:layout_width="match_parent"
            android:layout_height="50dp"

            app:layout_constraintTop_toBottomOf="@+id/login_layout_password"

            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="40dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textStyle="bold"
                android:textColor="@color/colorBtnTitle"
                android:textSize="@dimen/all_btn_text_size"
                android:layout_gravity="center"
                android:text="@string/login_btn"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/login_txt_signup"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@+id/login_btn_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            android:layout_marginTop="20dp"
            android:text="@string/signup_btn"
            android:textColor="@color/colorPrimary" />
        
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>