<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ChangePassActivity.ChangePassActivity">
    <ImageView
        android:id="@+id/pass_background"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:scaleType="centerCrop"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:padding="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pass_layout_pass"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toTopOf="parent"

            android:padding="15dp"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/bg_input">

            <EditText
                android:id="@+id/pass_edt_pass"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toTopOf="parent"

                android:inputType="textPassword"
                android:maxLines="1"
                android:hint="@string/pass_old"
                android:background="@null"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pass_layout_newpass"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@+id/pass_layout_pass"

            android:padding="15dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_input">

            <EditText
                android:id="@+id/pass_edt_newpass"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toTopOf="parent"

                android:inputType="textPassword"
                android:maxLines="1"
                android:hint="@string/pass_new"
                android:background="@null"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pass_layout_confirmpass"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@+id/pass_layout_newpass"

            android:padding="15dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_input">

            <EditText
                android:id="@+id/pass_edt_confirmpass"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toTopOf="parent"

                android:inputType="textPassword"
                android:maxLines="1"
                android:hint="@string/pass_confirm"
                android:background="@null"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/pass_btn_change"

            android:layout_width="match_parent"
            android:layout_height="50dp"

            app:layout_constraintTop_toBottomOf="@+id/pass_layout_confirmpass"

            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="40dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textStyle="bold"
                android:textColor="@color/colorBtnTitle"
                android:textSize="@dimen/all_btn_text_size"
                android:layout_gravity="center"
                android:text="@string/all_confirm"/>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>